Search ares and imgs load

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm-run-all --parallel browser styles",
     "browser": "lite-server",
-    "styles": "node-sass scss/style.scss dist/style.css -W",
+    "styles": "node-sass scss/style.scss dist/style.css -w",
     "build": "rm -rf build && copyfiles assets/* index.html assets/fonts/**/* dist/* build"
   },
   "devDependencies": {
