--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm-run-all": "^3.1.1"
   },
   "dependencies": {
+    "copyfiles": "^1.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "normalize.css": "^5.0.0"
